# minicam

./: .gitignore  CMakeLists.txt  README.md  config.yml
app/: main.cpp
docs/uml/: class_overview.puml  include_deps.puml
include/common/: log.h  logger.h  noncopyable.h
include/core/: buffer.h  queue.h  request.h  types.h
include/graph/: executor.h  inode.h  isource.h  node_factory.h  pipeline_bus.h
include/service/: camera_service.h
src/common/: logger.cpp
src/nodes/: pack_node.cpp  sink_node.cpp  source_node.cpp
src/service/: camera_service.cpp
